Some clean up